--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,10 @@
+@font-face {
+  font-family: 'copperplate';
+  src: url('Copperplate Regular.ttf');
+}
+
 * {
-  font-family: Sans-Serif;
+  font-family: 'copperplate', serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,7 +15,6 @@ header {
   justify-content: center;
   vertical-align: middle;
   align-items: center;
-  background-color: #907a7a;
   height: 140px;
 }
 .navspacer {
@@ -33,7 +37,7 @@ header {
   justify-content: space-around;
 }
 .navmenu li {
-  padding: 10px;
+  padding: 20px;
 }
 .navmenu ul li a {
   color: white;
@@ -41,17 +45,39 @@ header {
   font-size: 2rem;
 }
 .logo {
-  width: 100px;
   height: 100px;
 }
+.overlay {
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100vh;
+}
 #showcase {
-  height: 600px;
-  position: relative;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100vh;
+  width: 100%;
 }
 .showitem {
+  z-index: -1;
   position: absolute;
   object-fit: cover;
   width: 100%;
   height: 100%;
   top: 0;
+}
+.title {
+  position: absolute;
+  top: 45%;
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+}
+.title h1 {
+  color: white;
+  font-size: 4.5em;
+  line-height: 1em;
 }
