--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -138,7 +138,7 @@ label {
   padding-left: 20px;
   padding-right: 20px;
 }
-.navmenu ul {
+.navlinks {
   list-style: none;
   display: flex;
   justify-content: space-around;
@@ -192,8 +192,32 @@ label {
   display: none;
 }
 .burger div {
-  width: 25px;
-  height: 3px;
+  width: 35px;
+  height: 5px;
   background-color: white;
-  margin: 5px;
+  margin: 6px 0;
+}
+@media screen and (max-width: 1024px) {
+  body {
+    overflow-x: hidden;
+  }
+  .navlinks {
+    position: absolute;
+    right: 0px;
+    height: calc(100vh - 140px);
+    top: 140px;
+    background-color: rgba(0, 0, 0, 0.95);
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+  .burger {
+    display: block;
+    cursor: pointer;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
 }
