--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -46,8 +46,8 @@ label {
   margin-bottom: 20px;
 }
 .main-content {
-  height: calc(100vh - 140px);
   padding-top: 100px;
+  padding-bottom: 100px;
   background-color: white;
 }
 .login {
