--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -241,3 +241,37 @@ label {
   color: white;
   font-size: 1.2rem;
 }
+.items {
+  display: flex;
+}
+.item {
+  margin: 12px;
+  background-color: #fff;
+  min-height: 160px;
+  position: relative;
+  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.35);
+  padding: 1.2rem;
+  flex-basis: calc(33.33% - 24px);
+}
+.item-name {
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+}
+.item-price {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.item-add {
+  display: block;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #ff0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: none;
+}
