--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -275,3 +275,25 @@ label {
   font-weight: bold;
   border: none;
 }
+.stock {
+  margin: 0 auto;
+  width: 60%;
+  height: calc(100vh - 340px);
+}
+.stock-table {
+  width: 100%;
+}
+.stock button {
+  border: none;
+  padding: 15px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+.additem-modal {
+  background: lightgrey;
+  position: absolute;
+  width: 50%;
+  height: 60%;
+  top: 20%;
+  left: 25%;
+}
