added flex grow to menu to ensure it fits page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -301,6 +301,9 @@ label {
 .order-layout {
   display: flex;
 }
+.order-menu {
+  flex-grow: 1;
+}
 .side-basket {
   padding: 15px;
   background: #f3f2f2;
