--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,6 +49,7 @@ label {
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: white;
+  height: calc(100vh - 230px);
 }
 .login {
   left: 33.33%;
@@ -300,14 +301,20 @@ label {
 }
 .order-layout {
   display: flex;
+  height: 100%;
 }
 .order-menu {
   flex-grow: 1;
 }
 .side-basket {
+  display: flex;
+  flex-direction: column;
   padding: 15px;
   background: #f3f2f2;
   width: 30%;
+}
+.side-content {
+  flex-grow: 1;
 }
 .side-header {
   position: relative;
@@ -336,4 +343,19 @@ label {
   height: 15px;
   margin-left: 15px;
   cursor: pointer;
+}
+.side-footer {
+  height: 50px;
+  width: 100%;
+}
+.side-footer a {
+  display: block;
+  text-align: center;
+  width: 100%;
+  height: 60px;
+  background-color: #ff0;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+  line-height: 59px;
 }
