change side quantity styling to be more clear

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -330,7 +330,8 @@ label {
   font-size: 1rem;
 }
 .side-quantity {
-  width: 24px;
+  width: 35px;
+  text-align: center;
 }
 .side-itemname {
   flex-grow: 1;
