--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -312,6 +312,8 @@ label {
   padding: 15px;
   background: #f3f2f2;
   width: 30%;
+  max-width: 600px;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.35);
 }
 .side-content {
   flex-grow: 1;
