--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -386,3 +386,13 @@ label {
   max-width: 400px;
   width: 80%;
 }
+.checkout-button {
+  text-align: center;
+}
+.checkout-button input {
+  background-color: #0a4893;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+}
